syntax = "proto3";

package eto.pb2arrow.tests.v3;

message Foo {
	int32 key = 1;
	string str_val = 2;
}

message Struct {
	uint64 v1 = 1;
	bytes b1 = 2;
}

message Bar {
	repeated sint32 a = 1;
	bool b = 2;
	double d = 3;
	Struct s = 4;
	bool v3_only = 5;
}

message MessageWithNestedEnum {
	SomeRandomEnum status = 1;
}

enum SomeRandomEnum {
    PASSSING = 0;
    FAILING = 1;
    LEGACY = 2;
}

message SimpleOneOfMessage {
	string words = 1;

	oneof inner {
		Foo foo = 2;
		Bar bar = 3;
	}
}

message UnitContainer {
	InnerUnitMessage inner = 1;
}

message InnerUnitMessage {}